# tomatoes

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 0bd2fc2cbceb_initial_migration.py  873ff3370d8d_add_operational_finance_tables.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py
app/common/: README.md  __init__.py  base_controller.py
app/core/: database.py  events.py  exceptions.py  middleware.py  permissions.py  security.py
app/entities/: README.md  __init__.py  base.py  movement.py  movement_item.py  operational_account.py  operational_category.py  operational_category_tree.py  operational_transaction.py  order.py  permission.py  product.py  role.py  role_permission.py  user.py  user_role.py  warehouse.py  warehouse_item.py
app/schemas/: __init__.py
app/templates/: README.md  base.html  example_form.html  example_list.html  index.html
app/web/: __init__.py  router.py
docs/: ALEMBIC_SETUP.md  architecture.md  naming_conventions.md
requirements/: design.json  plan.txt  Архитектура контекстов.txt  Бухгалтерский учёт use-cases.txt  Логика генерации бухгалтерских проводок.txt  Операционный учёт - Материалы и услуги.txt  Операционный учёт - Производство.txt  Операционный учёт - Финансы.txt  Описание модулей.md
requirements/1. Модуль администрирования/: Бизнес-процессы модуля.md  Пользовательские истории.md  (+1 more)
requirements/9. Гранты/: 9. Гранты.md
scripts/: apply_migrations.sh  create_migration.sh  init_db.sql
seeds/: README.md  seed.py
tests/: __init__.py
(+93 files in other folders)
