[project]
name = "tomatoes"
version = "0.1.0"
description = "ERP system for production, warehouse, logistics and finance management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.128.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "jose>=1.0.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "casbin>=1.43.0",
    "casbin-sqlalchemy-adapter>=1.4.0",
]
